--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,8 +17,15 @@
     "express": "^5.1.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
     "mysql2": "^3.15.3",
     "nodemailer": "^7.0.11",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.17.2"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0",
+    "supertest": "^7.1.4"
   }
 }
